--- a/freeCodeCamp/DOOM/aula-1/index.html
+++ b/freeCodeCamp/DOOM/aula-1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     <div class="container">
         <h1 id="main-heading">Filme Favorito</h1>
         <ul>
-            <li class="list-items">The Matrix</li>
+            <li class="list-items"><span>Neo </span>The Matrix</li>
             <li class="list-items">Star Wars</li>
             <li class="list-items">Harry Potter</li>
             <li class="list-items">Lord of the Rings</li>
