--- a/freeCodeCamp/DOOM/aula-2/index.html
+++ b/freeCodeCamp/DOOM/aula-2/index.html
@@ -11,17 +11,17 @@
     <div class="container">
         <div class="exemplos">
             <h1>Exemplo 1</h1>
-            <button>Enter</button>
+            <button onclick="alert('I love js')">Enter</button>
         </div>
 
         <div class="exemplos">
             <h1>Exemplo 2</h1>
-            <button>Enter</button>
+            <button class="btn-2">Enter</button>
         </div>
 
         <div class="exemplos">
             <h1>Exemplo 3</h1>
-            <button>Enter</button>
+            <button class="btn-3">Enter</button>
         </div>
     </div>
 
