--- a/freeCodeCamp/CSS/projeto_final/hours.html
+++ b/freeCodeCamp/CSS/projeto_final/hours.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Clécio">
-    <meta name="description" content="O Site Oficial do The Little Taco Shop">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hours</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
+    <meta name="author" content="Dave Gray">
+    <meta name="description" content="Store Hours for The Little Taco Shop">
+    <title>LTS Hours</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/main.js" defer></script>
 </head>
+
 <body>
     <header class="header">
-        <h1 class="header__h1">The Little Taco Shop Hours</h1>
+        <h1 class="header__h1">Little Taco Shop</h1>
         <nav class="header__nav">
             <ul class="header__ul">
                 <li>
-                    <a href="/">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="/#menu">Menu</a>
+                    <a href="#">Menu</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
@@ -32,11 +35,34 @@
 
     <section class="hero">
         <figure>
-            <img src="img/tacos_tray_1000x667.png" alt="A Tray of tasty Tacos" title="We love trays of tacos!" width="1000" height="667">
+            <img src="img/tacos_tray_1000x667.png" alt="A Tray of Tasty Tacos" title="We love trays of tacos!"
+                width="1000" height="667">
             <figcaption class="offscreen">
                 A Tray of Tasty Tacos
             </figcaption>
         </figure>
     </section>
+
+    <main class="main">
+        <article class="main__article">
+            <h2>Hours</h2>
+            <p>
+                We are open 7 days a week!
+            </p>
+            <dl>
+                <dt>Sunday-Thursday</dt>
+                <dd>11am-9pm</dd>
+                <dt>Friday-Saturday</dt>
+                <dd>11am-11pm</dd>
+            </dl>
+        </article>
+    </main>
+    <footer class="footer">
+        <p>
+            <span class="nowrap">Copyright &copy; <time id="year">2023</time></span>
+            <span class="nowrap">Little Taco Shop</span>
+        </p>
+    </footer>
 </body>
+
 </html>
