--- a/freeCodeCamp/CSS/projeto_final/about.html
+++ b/freeCodeCamp/CSS/projeto_final/about.html
@@ -69,7 +69,7 @@
 
     <footer class="footer">
         <p>
-            <span class="nowrap">Copyright &copy; <time id="year">2023</time></span>
+            <span class="nowrap">Copyright &copy; <time id="year"></time></span>
             <span class="nowrap">Little Taco Shop</span>
         </p>
     </footer>
