--- a/freeCodeCamp/CSS/projeto_final/contact.html
+++ b/freeCodeCamp/CSS/projeto_final/contact.html
@@ -84,7 +84,7 @@
     </main>
     <footer class="footer">
         <p>
-            <span class="nowrap">Copyright &copy; <time id="year">2023</time></span>
+            <span class="nowrap">Copyright &copy; <time id="year"></time></span>
             <span class="nowrap">Little Taco Shop</span>
         </p>
     </footer>
