--- a/freeCodeCamp/CSS/projeto_final/index.html
+++ b/freeCodeCamp/CSS/projeto_final/index.html
@@ -106,7 +106,7 @@
     <hr>
     <footer class="footer">
         <p>
-            <span class="nowrap">Copyright &copy; <time id="year">2023</time></span>
+            <span class="nowrap">Copyright &copy; <time id="year"></time></span>
             <span class="nowrap">Little Taco Shop</span>
         </p>
     </footer>
