--- a/freeCodeCamp/JSFULL/P_1/ex2/index.html
+++ b/freeCodeCamp/JSFULL/P_1/ex2/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Contar Pessoas:</h1>
-    <h2 id="count-el">0</h2>
-    <button id="increment-btn" onclick="increment()">INCREMENT</button>
-    <button id="save-btn" onclick="save()">SAVE</button>
+    
+    <p id="welcome-el"></p>
 
     <script src="app.js"></script>
 </body>
