--- a/freeCodeCamp/JSFULL/P_3/index.html
+++ b/freeCodeCamp/JSFULL/P_3/index.html
@@ -12,6 +12,8 @@
     <p id="card-el">Cards:</p>
     <p id="sum-el">Sum:</p>
     <button id="start-btn" onclick="startGame()">START GAME</button>
+    <br>
+    <button id="new-card-btn" onclick="newCard()">NEW CARD</button>
     <script src="app.js"></script>
 </body>
 </html>
