--- a/freeCodeCamp/JSFULL/P_5/index.html
+++ b/freeCodeCamp/JSFULL/P_5/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Leads Tracker</title>
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <input type="text" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
+    <ul id="ul-el"></ul>
+
     <script src="app.js"></script>
 </body>
 </html>
