--- a/freeCodeCamp/BOOTSTRAP/BS_Portifolio/index.html
+++ b/freeCodeCamp/BOOTSTRAP/BS_Portifolio/index.html
@@ -6,12 +6,13 @@
     <title>Bootstrap e Sass</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- START THE NAV BAR SECTION -->
-    <nav class="navbar navbar-expand-lg menu">
+    <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">CL</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -42,6 +43,36 @@
           </div>
         </div>
       </nav>
+
+      <!-- START THE INTRO SECTION -->
+      <section id="home" class="intro-section">
+        <div class="container">
+          <div class="row align-items-center text-white">
+            <!-- START CONTAINER FOR THE INTRO -->
+            <div class="col-md-6 intros">
+              <h1 class="display-2">
+                <span class="display-2--intro">Olá, eu sou Clécio</span>
+                <span class="display-2--description lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde rem neque eveniet deserunt obcaecati veritatis doloribus at ea nam omnis itaque provident facere, minima dolorem aspernatur sit illum explicabo sint.</span>
+              </h1>
+              <button type="button" class="rounded-pill btn-rounded">Get in Touch
+                <span><i class="fas fa-phone-alt"></i></span>
+              </button>
+            </div>
+            <!-- START THE CONTENT FOR THE VIDEO -->
+            <div class="col-md-6 intros text-end">
+              <div class="video-box">
+                <img src="images/intro-section-illustration.png" alt="video illustration" class="img-fluid">
+                <a href="#" class="position-absolute top-50 start-50 translate-middle">
+                  <span>
+                    <i class="fas fa-play-circle"></i>
+                  </span>
+                </a>
+              </div>
+          </div>
+          </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,64L48,101.3C96,139,192,213,288,240C384,267,480,245,576,208C672,171,768,117,864,133.3C960,149,1056,235,1152,266.7C1248,299,1344,277,1392,266.7L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      </section>
     
     <script src="assets/js/bootstrap.bundle.js"></script>
 </body>
