--- a/freeCodeCamp/BOOTSTRAP/BS_Portifolio/index.html
+++ b/freeCodeCamp/BOOTSTRAP/BS_Portifolio/index.html
@@ -66,12 +66,14 @@
                   <span>
                     <i class="fas fa-play-circle"></i>
                   </span>
+                  <span class="border-animation border-animation--border-1"></span>
+                  <span class="border-animation border-animation--border-2"></span>
                 </a>
               </div>
           </div>
           </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,64L48,101.3C96,139,192,213,288,240C384,267,480,245,576,208C672,171,768,117,864,133.3C960,149,1056,235,1152,266.7C1248,299,1344,277,1392,266.7L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,64L48,101.3C96,139,192,213,288,240C384,267,480,245,576,208C672,171,768,117,864,133.3C960,149,1056,235,1152,266.7C1248,299,1344,277,1392,266.7L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
       </section>
     
     <script src="assets/js/bootstrap.bundle.js"></script>
