--- a/freeCodeCamp/BOOTSTRAP/BS_Portifolio/index.html
+++ b/freeCodeCamp/BOOTSTRAP/BS_Portifolio/index.html
@@ -6,6 +6,7 @@
     <title>Bootstrap e Sass</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" href="assets/vendors/css/glightbox.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -62,7 +63,7 @@
             <div class="col-md-6 intros text-end">
               <div class="video-box">
                 <img src="images/intro-section-illustration.png" alt="video illustration" class="img-fluid">
-                <a href="#" class="position-absolute top-50 start-50 translate-middle">
+                <a href="" class="glightbox position-absolute top-50 start-50 translate-middle">
                   <span>
                     <i class="fas fa-play-circle"></i>
                   </span>
@@ -73,9 +74,61 @@
           </div>
           </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,64L48,101.3C96,139,192,213,288,240C384,267,480,245,576,208C672,171,768,117,864,133.3C960,149,1056,235,1152,266.7C1248,299,1344,277,1392,266.7L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,64L48,101.3C96,139,192,213,288,240C384,267,480,245,576,208C672,171,768,117,864,133.3C960,149,1056,235,1152,266.7C1248,299,1344,277,1392,266.7L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
       </section>
-    
+
+      <!-- START THE CAMPANIES -->
+      <section id="campanies" class="campanies">
+        <div class="container">
+          <div class="row text-center">
+            <h4 class="fw-bold lead mb-3">Trusted by campanies like</h4>
+            <div class="heading-line mb-5"></div>
+          </div>
+        </div>
+      </section>
+
+      <!-- START THE CAMPANIES CONTENT -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-lg-2">
+            <div class="campanies__logo-box shadow-sm">
+              <img src="images/campanies/campany-1.png" alt="campany 1 logo" title="campany 1 logo" class="img-fluid"></div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="campanies__logo-box shadow-sm">
+              <img src="images/campanies/campany-2.png" alt="campany 2 logo" title="campany 2 logo" class="img-fluid"></div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="campanies__logo-box shadow-sm">
+              <img src="images/campanies/campany-3.png" alt="campany 3 logo" title="campany 3 logo" class="img-fluid"></div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="campanies__logo-box shadow-sm">
+              <img src="images/campanies/campany-4.png" alt="campany 4 logo" title="campany 4 logo" class="img-fluid"></div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="campanies__logo-box shadow-sm">
+              <img src="images/campanies/campany-5.png" alt="campany 5 logo" title="campany 5 logo" class="img-fluid"></div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="campanies__logo-box shadow-sm">
+              <img src="images/campanies/campany-6.png" alt="campany 6 logo" title="campany 6 logo" class="img-fluid"></div>
+          </div>
+        </div>
+      </div>
+
+
+
+    <script src="assets/vendors/js/glightbox.min.js"></script>
+    <script type="text/javascript">
+      const lightbox = GLightbox({
+        'href': '<iframe width="961" height="550" src="https://www.youtube.com/embed/iJKCj8uAHz8?list=PLWKjhJtqVAbmMuZ3saqRIBimAKIMYkt0E" title="Learn Bootstrap 5 and SASS by Building a Portfolio Website - Full Course" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>',
+        'type': 'video',
+        'source': '',
+        'widht': 900,
+        'autoPlayVideos': true
+      })
+    </script>
     <script src="assets/js/bootstrap.bundle.js"></script>
 </body>
 </html>
