--- a/freeCodeCamp/BOOTSTRAP/BS_Portifolio/index.html
+++ b/freeCodeCamp/BOOTSTRAP/BS_Portifolio/index.html
@@ -216,6 +216,144 @@
         </div>
       </section>
 
+      <!-- START SECTION TESTEMONIALS -->
+      <section id="testimonials" class="testimonials">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,64L48,80C96,96,192,128,288,122.7C384,117,480,75,576,58.7C672,43,768,53,864,69.3C960,85,1056,107,1152,101.3C1248,96,1344,64,1392,48L1440,32L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+        <div class="container">
+          <div class="row text-center text-white">
+            <h1 class="display-3 fw-bold">Clientes</h1>
+            <hr style="width: 150px; height: 5px;" class="mx-auto">
+            <p class="lead pt-1">O que os clientes dizem</p>
+          </div>
+
+          <!-- START THE CAROUSEL CONTENT -->
+          <div class="row align-items-center">
+            <div id="carouselExampleCaptions" class="carousel slide">
+              <div class="carousel-inner">
+                <!-- CARROUSEL ITEM 1 -->
+                <div class="carousel-item active">
+                  <!-- testimonials card -->
+                  <div class="testimonials__card">
+                    <p class="lh-lg">
+                      <i class="fas fa-quote-left"></i>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur consectetur debitis dignissimos ducimus, ea veritatis suscipit dolor libero similique quos sapiente, reiciendis iusto praesentium repellat maxime molestias?
+                      <i class="fas fa-quote-right"></i>
+                      <div class="ratings p-1">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </p>
+                  </div>
+                  <!-- client pictures -->
+                  <div class="testimonials__picture">
+                    <img src="images/testimonials/client-1.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
+                  </div>
+                  <!-- client name & role -->
+                  <div class="testimonials__name">
+                    <h3>Patrick</h3>
+                    <p class="lead fw-light">CEO & founder</p>
+                  </div>
+                </div>
+
+                <!-- CARROUSEL ITEM 2 -->
+                <div class="carousel-item">
+                  <!-- testimonials card -->
+                  <div class="testimonials__card">
+                    <p class="lh-lg">
+                      <i class="fas fa-quote-left"></i>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur consectetur debitis dignissimos ducimus, ea veritatis suscipit dolor libero similique quos sapiente, reiciendis iusto praesentium repellat maxime molestias?
+                      <i class="fas fa-quote-right"></i>
+                      <div class="ratings p-1">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </p>
+                  </div>
+                  <!-- client pictures -->
+                  <div class="testimonials__picture">
+                    <img src="images/testimonials/client-2.jpg" alt="client-2 picture" class="rounded-circle img-fluid">
+                  </div>
+                  <!-- client name & role -->
+                  <div class="testimonials__name">
+                    <h3>Joy</h3>
+                    <p class="lead fw-light">Finance</p>
+                  </div>
+                </div>
+
+                <!-- CARROUSEL ITEM 3 -->
+                <div class="carousel-item">
+                  <!-- testimonials card -->
+                  <div class="testimonials__card">
+                    <p class="lh-lg">
+                      <i class="fas fa-quote-left"></i>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur consectetur debitis dignissimos ducimus, ea veritatis suscipit dolor libero similique quos sapiente, reiciendis iusto praesentium repellat maxime molestias?
+                      <i class="fas fa-quote-right"></i>
+                      <div class="ratings p-1">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </p>
+                  </div>
+                  <!-- client pictures -->
+                  <div class="testimonials__picture">
+                    <img src="images/testimonials/client-3.jpg" alt="client-3 picture" class="rounded-circle img-fluid">
+                  </div>
+                  <!-- client name & role -->
+                  <div class="testimonials__name">
+                    <h3>Claire</h3>
+                    <p class="lead fw-light">Global brand manager</p>
+                  </div>
+                </div>
+
+                <!-- CARROUSEL ITEM 4 -->
+                <div class="carousel-item">
+                  <!-- testimonials card -->
+                  <div class="testimonials__card">
+                    <p class="lh-lg">
+                      <i class="fas fa-quote-left"></i>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur consectetur debitis dignissimos ducimus, ea veritatis suscipit dolor libero similique quos sapiente, reiciendis iusto praesentium repellat maxime molestias?
+                      <i class="fas fa-quote-right"></i>
+                      <div class="ratings p-1">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </p>
+                  </div>
+                  <!-- client pictures -->
+                  <div class="testimonials__picture">
+                    <img src="images/testimonials/client-4.jpg" alt="client-4 picture" class="rounded-circle img-fluid">
+                  </div>
+                  <!-- client name & role -->
+                  <div class="testimonials__name">
+                    <h3>Uhuru</h3>
+                    <p class="lead fw-light">CEO & founder</p>
+                  </div>
+                </div>
+              </div>
+              <div class="text-center">
+                <button class="btn btn-outline-light fas fa-long-arrow-alt-left" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev"> 
+                </button>
+                <button class="btn btn-outline-light fas fa-long-arrow-alt-right" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,192L48,186.7C96,181,192,171,288,186.7C384,203,480,245,576,224C672,203,768,117,864,101.3C960,85,1056,139,1152,170.7C1248,203,1344,213,1392,218.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      </section>
+
 
 
     <script src="assets/vendors/js/glightbox.min.js"></script>
