--- a/freeCodeCamp/BOOTSTRAP/BS_Portifolio/index.html
+++ b/freeCodeCamp/BOOTSTRAP/BS_Portifolio/index.html
@@ -549,6 +549,62 @@
         </div>
       </section>
 
+      <!-- START SECTION GET STARTED -->
+      <section id="contact" class="get-started">
+        <div class="container">
+          <div class="row text-center">
+            <h1 class="display-3 fw-bold text-capitalize">Get Started</h1>
+            <div class="heading-line"></div>
+            <p class="lh-lg">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos deleniti illum fuga.
+            </p>
+          </div>
+
+          <!-- STARTH THE CTA CONTENT -->
+          <div class="row text-white">
+            <div class="col-12 col-lg-6 gradient shadow p-3">
+              <div class="cta-info w-100">
+                <h4 class="display-4 fw-bold">100% Satisfaction Guaranteed</h4>
+                <p class="lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis vel magnam natus cupiditate facere autem cum sunt corrupti eius, nesciunt ea debitis blanditiis unde, error consectetur accusantium incidunt fugit. Quis?</p>
+                <h3 class="diplay-3--brief">What will be the next step?</h3>
+                <ul class="cta-info__list">
+                  <li>Lorem ipsum</li>
+                  <li>Lorem ipsum</li>
+                  <li>Lorem ipsum</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-12 col-lg-6 bg-white shadow p-3">
+              <div class="form w-100 pb-2">
+                <h4 class="display-3--title mb-5">start you project</h4>
+                <form action="#" class="row">
+                  <div class="col-lg-6 col-md-6 mb-3">
+                    <input type="text" placeholder="First Name" id="inputFirstName" class="shadow form-control form-control-lg">
+                  </div>
+                  <div class="col-lg-6 col-md-6 mb-3">
+                    <input type="text" placeholder="Last Name" id="inputLastName" class="shadow form-control form-control-lg">
+                  </div>
+                  <div class="col-lg-12 mb-3">
+                    <input type="email" placeholder="Email adress" id="inputEmail" class="shadow form-control form-control-lg">
+                  </div>
+                  <div class="col-lg-12 mb-3">
+                    <textarea name="message" placeholder="Message" id="message" rows="8" class="shadow form-control form-control-lg"></textarea>
+                  </div>
+                  <div class="text-center d-grid mt-1">
+                    <button type="button" class="btn btn-primary rounded-pill pt-3 pb-3">
+                      Submit
+                      <i class="fas fa-paper-plane"></i>
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
 
     <script src="assets/vendors/js/glightbox.min.js"></script>
     <script type="text/javascript">
