--- a/freeCodeCamp/BOOTSTRAP/BS_Portifolio/index.html
+++ b/freeCodeCamp/BOOTSTRAP/BS_Portifolio/index.html
@@ -604,6 +604,107 @@
       </section>
 
 
+      <!-- START THE FOOTER -->
+      <footer class="footer">
+        <div class="container">
+          <div class="row">
+
+            <!-- CONTENT FOR THE MOBILE NUMBER -->
+            <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+              <div class="contact-box__icon">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-call" viewBox="0 0 24 24" stroke-width="1"  fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" /><path d="M15 7a2 2 0 0 1 2 2" /><path d="M15 3a6 6 0 0 1 6 6" /></svg>
+              </div>
+              <div class="contact-box__info">
+                <a href="" class="contact-box__info--title">(87) 99109-0861</a>
+                <p class="contact-box__info--subtitle">Seg-Sab 8am-6pm</p>
+              </div>
+            </div>
+
+            <!-- CONTENT FOR EMAIL -->
+            <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+              <div class="contact-box__icon">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail-opened" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 9l9 6l9 -6l-9 -6l-9 6" /><path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10" /><path d="M3 19l6 -6" /><path d="M15 13l6 6" /></svg>
+              </div>
+              <div class="contact-box__info">
+                <a href="" class="contact-box__info--title">example@email.com</a>
+                <p class="contact-box__info--subtitle">Suporte Online</p>
+              </div>
+            </div>
+
+            <!-- CONTENT FOR LOCATION -->
+            <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+              <div class="contact-box__icon">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" viewBox="0 0 24 24" stroke-width="1"  fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 18.5l-3 -1.5l-6 3v-13l6 -3l6 3l6 -3v7.5" /><path d="M9 4v13" /><path d="M15 7v5.5" /><path d="M21.121 20.121a3 3 0 1 0 -4.242 0c.418 .419 1.125 1.045 2.121 1.879c1.051 -.89 1.759 -1.516 2.121 -1.879z" /><path d="M19 18v.01" /></svg>
+              </div>
+              <div class="contact-box__info">
+                <a href="" class="contact-box__info--title">Arcoverde, PE</a>
+                <p class="contact-box__info--subtitle">Arcoverde-PE, Brasil</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- START THE SOCIAL CONTENT -->
+        <div class="footer-sm" style="background-color: #212121;">
+          <div class="container">
+            <div class="row py-4 text-center text-white">
+              <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
+                fale comigo pela rede social
+              </div>
+                <div class="col-lg-7 col-md-6">
+                  <a href=""><i class="fab fa-facebook"></i></a>
+                  <a href=""><i class="fab fa-linkedin"></i></a>
+                  <a href=""><i class="fab fa-github"></i></a>
+                  <a href=""><i class="fab fa-instagram"></i></a>
+                </div>
+              </div>
+          </div>
+        </div>
+
+        <!-- START THE CONTENT FOR CAMPANY INFO -->
+        <div class="container mt-5">
+          <div class="row text-white justify-content-center mt-3 pb-3">
+            <div class="col-12 col-sm-6 col-lg-6">
+              <h5 class="text-captilize fw-bold">Campany name</h5>
+              <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+              <p class="lh-lg">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae fugiat magni eligendi modi laborum nostrum autem numquam.
+              </p>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+              <h5 class="text-captilize fw-bold">Products</h5>
+              <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+              <ul class="list-inline campany-list">
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+              </ul>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+              <h5 class="text-captilize fw-bold">Useful links</h5>
+              <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+              <ul class="list-inline campany-list">
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+              </ul>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+              <h5 class="text-captilize fw-bold">Contacts</h5>
+              <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+              <ul class="list-inline campany-list">
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">Lorem Ipsum</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+
 
 
     <script src="assets/vendors/js/glightbox.min.js"></script>
